Updated sponsors, video, and booth text

--- a/getinvolved/index.html
+++ b/getinvolved/index.html
@@ -67,7 +67,7 @@
                 </ul>
                 
                 <ul>
-                    <li>Non-UCLA groups, corporations, and individuals are asked to make a donation (either monetary or product) in order to reserve a booth at our event. Please contact our fundraising coordinator or <a href="https://giving.ucla.edu/Standard/NetDonate.aspx?Code=M-2523&Finder=F-123456&ID=9999999999&LName=Caulfield&SiteNum=977">click here</a> for more information.</li>
+                    <li>Non-UCLA groups, corporations, and individuals are asked to make a donation (either monetary or product) in order to reserve a booth at our event. Please contact <a href="mailto:bsitarski@astro.ucla.edu">our fundraising coordinator</a> or <a href="https://giving.ucla.edu/Standard/NetDonate.aspx?Code=M-2523&Finder=F-123456&ID=9999999999&LName=Caulfield&SiteNum=977">click here</a> for more information.</li>
                 </ul>
             </div>
             <div class="expand-toggle down-arrow round-bottom">
@@ -89,7 +89,7 @@
             <div class="expand-content">
                 <ul>
                     <li>EYU provides you with the booth itself (10x10' tent, one table, two chairs, more available upon request) for free.</li>
-                <li>You are responsibe for buying your own supplies, but we do apply for CPC funding as an organization. You can submit a budger proposal to our fundraising coordinator and some of your supplies <i>may</i> be payed for.</li>
+                <li>You are responsibe for buying your own supplies, but we do apply for CPC funding as an organization. You can submit a budget proposal to <a href="mailto:bsitarski@astro.ucla.edu">our fundraising coordinator</a> and some of your supplies <i>may</i> be payed for.</li>
 
                 </ul>
             </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="expand-content">
                 <ul>
-                    <li>Yes, but you will need to run your products by our merchandise coordinator.</li>
+                    <li>Yes, but you will need to run your products by <a href="mailto:apopkow@ucla.edu">our merchandise coordinator</a>.</li>
                 </ul>
                 <ul>
                     <li>We also give out small bags of giveaways for kids during the event. We are always looking for more materials to fill our giveaway bags (stickers, bookmarks, small toys, posters, etc). Please contact our merchandise coordinator if you would like to donate SWAG.</li>
@@ -131,7 +131,7 @@
                 <ul>
                     <li>Fill out a booth application <a href="https://docs.google.com/forms/d/1B-m2ZL0-6OP1VetQSLW6yS9Hz_J1PCmN7j-IXQDbAEo/viewform">form</a></li>
                     <li>Fill out a volunteer <a href="https://docs.google.com/forms/d/1vq3dgRNOEPFQg3aQBMWOlNq69d0XzYp2qITCaAD7KVs/viewform">form</a> for you and your volunteers (this gets you a t-shirt the day of EYU).</li>
-                    <li>Send supplies budget request to fundraising coordinator by September 20th.</li>
+                    <li>Send supplies budget request to <a href="mailto:bsitarski@astro.ucla.edu">our fundraising coordinator</a> by September 20th.</li>
                 </ul>
             </div>
 
