--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			
 			<article class="block"><!-- Slideshow block -->
 				<div class="video-container">
-					<center><iframe src="https://www.youtube-nocookie.com/embed/9tYAgoxQrq4?rel=0" frameborder="0" allowfullscreen></iframe></center>
+					<center><iframe src="https://www.youtube-nocookie.com/embed/doC6Rd93YyA?rel=0" frameborder="0" allowfullscreen></iframe></center>
 				</div>
 			</article> <!-- Description /block -->	
 			
@@ -69,20 +69,44 @@
 			
 			<article class="block"><!-- Sponsor block -->
 				<center><h3><em>Sponsored by</em></h3></center>
+				<!-- Supergiant Sponsors -->
+				<center><p>Supergiant Sponsors</p></center>
 				<table class="sponsor">
 					<tbody>
 						<tr>
-							<td><h3>UCLA Division of<br>Physical Sciences</h3></td>
-							<td><h3>Mani L. Bhaumik</h3></td>
+							<td>
+								<h3>Chris Russell</h3>
+							</td>
+							<td>
+								<h3>Mani L. Bhaumik</h3>
+							</td>
 						</tr>
 						
 						<tr>
-							<td><h3>Chris Russell</h3></td>
+							<td>
+								<img src="SponsorLogos/UCLACollegePhysicalSciences.png">
+							</td>
+							<td>
+								<h3 class="emptySponsor">&#x25CC;</h3>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				
+				<!-- Shooting Star Sponsors -->
+				<hr>
+				<center><p>Shooting Star Sponsors</p></center>
+				<table class="sponsor">
+					<tbody>
+						<tr>
 							<td>
 								<object type="image/svg+xml"
 								    width=95%
 								    data="SponsorLogos/Celestron.svg">
 								  <span/></object>
+							</td>
+							<td>
+								<h4 class="emptySponsor">&#x25CC;</h4>
 							</td>
 						</tr>
 						<!-- <tr>
