Updated main text

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</article> <!-- Description /block -->	
 			
 			<article class="block"><!-- Description block -->
-				<p>Get ready for the most exciting day of science all year, the seventh annual Exploring Your Universe! This event is <em>free</em> of charge to the public and <em>family friendly</em>!</p>
+				<p>Get ready for the most exciting day of science all year, the seventh annual Exploring Your Universe! This event is <em>free</em> of charge and <em>family friendly</em>!</p>
 			</article> <!-- Description /block -->
 			
 			<article class="block"><!-- Sponsor block -->
