Updated Sponsor Info

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<h3>Mani L. Bhaumik</h3>
 							</td>
 							<td>
-								<h3>Chris Russell</h3>
+								<h3>California Space<br>Grant Consortium</h3>
 							</td>
 						</tr>
 					</tbody>
