Updated sponsor list typography

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 			</article> <!-- Description /block -->
 			
 			<article class="block"><!-- Sponsor block -->
-				<center><h3><em>EYU 2015 is sponsored by</em></h3></center>
+				<center><h3><strong>EYU 2015</strong> is sponsored by</h3></center>
 				<!-- Supergiant Sponsors -->
-				<center><p>Supergiant Sponsors</p></center>
+				<center><p><em>Supergiant Sponsors</em></p></center>
 				<table class="sponsor-first">
 					<tbody>
 						<tr>
@@ -98,7 +98,7 @@
 				
 				<!-- Galaxy Sponsors -->
 				<hr>
-				<center><p>Galaxy Sponsors</p></center>
+				<center><p><em>Galaxy Sponsors</em></p></center>
 				<table class="sponsor-first">
 					<tbody>
 						<tr>
@@ -118,7 +118,7 @@
 				
 				<!-- Shooting Star Sponsors -->
 				<hr>
-				<center><p>Shooting Star Sponsors</p></center>
+				<center><p><em>Shooting Star Sponsors</em></p></center>
 				<table class="sponsor-first">
 					<tbody>
 						<tr>
