--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 	</div> <!-- /content -->
 	
 	<footer class="small wrap">
-		<!-- <center><p class="small">Website designed by Abhimat Gautam</p></center> -->
+		<center><p class="small">Website designed by<br>Abhimat Gautam and Michael Topping</p></center>
 	</footer>
 </body>
 </html>
