Updated Donate link

--- a/getinvolved/index.html
+++ b/getinvolved/index.html
@@ -49,7 +49,7 @@
 			<li><strong>Get Involved</strong></li>
 			<li><a href="../downloads/">Downloads</a></li>
 			<li><a href="mailto:eyu.ucla@gmail.com">Contact Us</a></li>
-			<li><a href="https://giving.ucla.edu/Standard/NetDonate.aspx?Code=M-2523&Finder=F-123456&ID=9999999999&LName=Caulfield&SiteNum=977">Donate</a></li>
+			<li><a href="http://giving.ucla.edu/ExploringYourUniverse">Donate</a></li>
 		</ul></center>
 		
 		<section class="blocks">
