Added About Page

--- a/getinvolved/index.html
+++ b/getinvolved/index.html
@@ -48,6 +48,7 @@
 			<li><a href="../">Home</a></li>
 			<li><strong>Get Involved</strong></li>
 			<li><a href="../downloads/">Downloads</a></li>
+			<li><a href="../about/">About</a></li>
 			<li><a href="mailto:eyu.ucla@gmail.com">Contact Us</a></li>
 			<li><a href="http://giving.ucla.edu/ExploringYourUniverse">Donate</a></li>
 		</ul></center>
