--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <!--
  
-      Static EYU 2015 webpage by Abhimat Gautam.
+      Static EYU 2015: Downloads webpage by Abhimat Gautam.
   
 -->
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<title>Exploring Your Universe 2015</title>
+		<title>EYU 2015: About</title>
 		
 		<!-- Google Web Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
@@ -22,7 +22,8 @@
 		<link rel="apple-touch-icon" href="./touch-icon.png">
 		
 		<!-- Styles -->
-		<link rel="stylesheet" href="./styles.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="../FAQ-styles.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="../styles_subpage.css" type="text/css" media="screen" />
 </head>
 <body>
 	<header>
@@ -30,47 +31,60 @@
 			<div class="logo-container">
 				<object type="image/svg+xml"
 				    width=95%
-				    data="ColorLogo.svg">
+				    data="../ColorLogo.svg">
 				  <span/></object>
 			  </div>
 			<!-- <img src="ColorLogo.svg" alt="EYU Color Logo"> -->
 		</figure>
 		<div class="info-panel">
 			<div class="info-text">
-				<h1>Sunday<br>November 8, 2015</h1>
-				<hr>
-				<h2>UCLA Campus<br>Court of Sciences</h2></span>
-				<p><strong>Noon&ndash;5 pm</strong><br>Nighttime Activities: 5 pm&ndash;8 pm</p>
-				<hr>
-				<p><strong>Free Admission!</strong><br>(UCLA Parking: $12)</p>
+				<h1>About</h1>
 			</div>
 		</div>
 	</header>
 	
 	<div class="content wrap">
 		<center><ul class="pages">
-			<li><strong>Home</strong></li>
-			<li><a href="./getinvolved/">Get Involved</a></li>
-			<li><a href="./downloads/">Downloads</a></li>
-			<li><a href="./about/">About</a></li>
+			<li><a href="../">Home</a></li>
+			<li><a href="../getinvolved/">Get Involved</a></li>
+			<li><a href="../downloads/">Downloads</a></li>
+			<li><strong>About</strong></li>
 			<li><a href="mailto:eyu.ucla@gmail.com">Contact Us</a></li>
 			<li><a href="http://giving.ucla.edu/ExploringYourUniverse">Donate</a></li>
 		</ul></center>
 		
 		<section class="blocks">
 			
-			<article class="block"><!-- Slideshow block -->
-				<div class="video-container">
-					<center><iframe src="https://www.youtube-nocookie.com/embed/doC6Rd93YyA?rel=0" frameborder="0" allowfullscreen></iframe></center>
-				</div>
-			</article> <!-- Description /block -->	
-			
-			<article class="block"><!-- Description block -->
-				<p>Get ready for the most exciting day of science all year, the seventh annual Exploring Your Universe! This event is <em>free</em> of charge and <em>family friendly</em>!</p>
-			</article> <!-- Description /block -->
+			<article class="block"><!-- Main Text block -->
+				<p>Exploring Your Universe 2015 is made possible by our amazing partners and sponsors.</p>
+
+				<h2>Participating Groups</h2>
+
+				<h3>UCLA Partners</h3>
+
+				<h3>Community Partners</h3>
+
+				<h2>Organizing Committee</h2>
+
+				<p>Exploring Your Universe 2015 was put together with the help of all members of the 2015 EYU Organizing Committee:</p>
+
+				<ul>
+				<li><strong>Michael Topping</strong><br>Lead Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Laura Vican</strong><br>Consultant<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Jigar Gor</strong><br>Group Coordinator<br>UCLA, Department of Chemistry and Biochemistry</li>
+				<li><strong>Gary B. Glesener</strong><br>Facilities Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
+				<li><strong>Alexander Stephan</strong><br>Equipment Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Breann Sitarski</strong><br>Fundraising Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Shane Frewen</strong><br>Social Media Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Abhimat Gautam</strong><br>Design Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Juan Lora</strong><br>Public Talks Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
+				<li><strong>Alexis Popkow</strong><br>Merchandise Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Jennifer Tribble</strong><br>Food Coordinator<br>UCLA, Department of Neuroscience</li>
+				</ul>
+			</article> <!-- Main Text /block -->
 			
 			<article class="block"><!-- Sponsor block -->
-				<center><h3><strong>EYU 2015</strong> is sponsored by</h3></center>
+				<h2>Sponsors</h2>
 				<!-- Supergiant Sponsors -->
 				<center><p><em>Supergiant Sponsors</em></p></center>
 				<table class="sponsor-first">
@@ -89,7 +103,7 @@
 					<tbody>	
 						<tr>
 							<td class="full">
-								<img width=30% src="SponsorLogos/UCLACollegePhysicalSciences.png">
+								<img width=30% src="../SponsorLogos/UCLACollegePhysicalSciences.png">
 							</td>
 							<!-- <td>
 								<h3 class="emptySponsor">&#x25CC;</h3>
@@ -127,7 +141,7 @@
 							<td class="full">
 								<center><object type="image/svg+xml"
 								    width=30%
-								    data="SponsorLogos/Celestron.svg">
+								    data="../SponsorLogos/Celestron.svg">
 								  <span/></object></center>
 							</td>
 							<!-- <td>
@@ -141,10 +155,12 @@
 					</tbody>
 				</table>
 			</article> <!-- Sponsor /block -->
-		
+			
 		</section><!-- /blocks -->
 	</div> <!-- /content -->
-	
+	<script src="../jquery-1.11.1.min.js"></script>
+    <script src="../expand.js"></script>
+
 	<footer class="small wrap">
 		<center><p class="small">Website designed by<br>Abhimat Gautam and Michael Topping</p></center>
 	</footer>
