--- a/downloads/index.html
+++ b/downloads/index.html
@@ -48,6 +48,7 @@
 			<li><a href="../">Home</a></li>
 			<li><a href="../getinvolved/">Get Involved</a></li>
 			<li><strong>Downloads</strong></li>
+			<li><a href="../about/">About</a></li>
 			<li><a href="mailto:eyu.ucla@gmail.com">Contact Us</a></li>
 			<li><a href="http://giving.ucla.edu/ExploringYourUniverse">Donate</a></li>
 		</ul></center>
