Updated About page text

--- a/about/index.html
+++ b/about/index.html
@@ -56,13 +56,17 @@
 		<section class="blocks">
 			
 			<article class="block"><!-- Main Text block -->
-				<p>Exploring Your Universe 2015 is made possible by our amazing partners and sponsors.</p>
+				<p>Exploring Your Universe 2015 is made possible by all of our amazing partners, coordinators, and sponsors.</p>
 
 				<h2>Participating Groups</h2>
 
 				<h3>UCLA Partners</h3>
 
+				<center>*To be announced*</center>
+
 				<h3>Community Partners</h3>
+
+				<center>*To be announced*</center>
 
 				<h2>Organizing Committee</h2>
 
