Updated About page text

--- a/about/index.html
+++ b/about/index.html
@@ -62,11 +62,11 @@
 
 				<h3>UCLA Partners</h3>
 
-				<center>*To be announced*</center>
+				<center><em>To be announced</em></center>
 
 				<h3>Community Partners</h3>
 
-				<center>*To be announced*</center>
+				<center><em>To be announced</em></center>
 
 				<h2>Organizing Committee</h2>
 
