Updated About page placement

--- a/about/index.html
+++ b/about/index.html
@@ -56,17 +56,7 @@
 		<section class="blocks">
 			
 			<article class="block"><!-- Main Text block -->
-				<p>Exploring Your Universe 2015 is made possible by all of our amazing partners, coordinators, and sponsors.</p>
-
-				<h2>Participating Groups</h2>
-
-				<h3>UCLA Partners</h3>
-
-				<center><em>To be announced</em></center>
-
-				<h3>Community Partners</h3>
-
-				<center><em>To be announced</em></center>
+				<p>Exploring Your Universe 2015 is made possible by the amazing hard work of our coordinators, participating groups, and sponsors.</p>
 
 				<h2>Organizing Committee</h2>
 
@@ -85,6 +75,16 @@
 				<li><strong>Alexis Popkow</strong><br>Merchandise Coordinator<br>UCLA, Department of Physics and Astronomy</li>
 				<li><strong>Jennifer Tribble</strong><br>Food Coordinator<br>UCLA, Department of Neuroscience</li>
 				</ul>
+
+				<h2>Participating Groups</h2>
+
+				<h3>UCLA Partners</h3>
+
+				<center><em>To be announced</em></center>
+
+				<h3>Community Partners</h3>
+
+				<center><em>To be announced</em></center>
 			</article> <!-- Main Text /block -->
 			
 			<article class="block"><!-- Sponsor block -->
