--- a/about/index.html
+++ b/about/index.html
@@ -56,6 +56,8 @@
 		<section class="blocks">
 			
 			<article class="block"><!-- Main Text block -->
+				<p>Exploring Your Universe is an annual science outreach day held on the UCLA campus, filled with exciting science demos, activities, and talks.</p>
+
 				<p>Exploring Your Universe 2015 is made possible by the amazing hard work of our coordinators, participating groups, and sponsors.</p>
 
 				<h2>Organizing Committee</h2>
@@ -80,11 +82,11 @@
 
 				<h3>UCLA Partners</h3>
 
-				<center><em>To be announced</em></center>
+				<center><p><em>To be announced</em></p></center>
 
 				<h3>Community Partners</h3>
 
-				<center><em>To be announced</em></center>
+				<center><p><em>To be announced</em></p></center>
 			</article> <!-- Main Text /block -->
 			
 			<article class="block"><!-- Sponsor block -->
