Updated About Page

--- a/about/index.html
+++ b/about/index.html
@@ -57,6 +57,10 @@
 			<article class="block"><!-- Main Text block -->
 				<p>Exploring Your Universe is an annual science outreach day held on the UCLA campus, filled with exciting science demos, activities, and talks.</p>
 
+				<div class="video-container">
+				    <center><iframe src="https://www.youtube-nocookie.com/embed/doC6Rd93YyA?rel=0" frameborder="0" allowfullscreen></iframe></center>
+				</div>
+
 				<p>Exploring Your Universe 2015 is made possible by the amazing hard work of our coordinators, participating groups, and sponsors.</p>
 
 				<h2>Organizing Committee</h2>
@@ -66,15 +70,27 @@
 				<ul>
 				<li><strong>Michael Topping</strong><br>Lead Coordinator<br>UCLA, Department of Physics and Astronomy</li>
 				<li><strong>Laura Vican</strong><br>Consultant<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Jigar Gor</strong><br>Group Coordinator<br>UCLA, Department of Chemistry and Biochemistry</li>
-				<li><strong>Gary B. Glesener</strong><br>Facilities Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
-				<li><strong>Alexander Stephan</strong><br>Equipment Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Breann Sitarski</strong><br>Fundraising Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Shane Frewen</strong><br>Social Media Coordinator<br>UCLA, Department of Physics and Astronomy</li>
 				<li><strong>Abhimat Gautam</strong><br>Design Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Juan Lora</strong><br>Public Talks Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
-				<li><strong>Alexis Popkow</strong><br>Merchandise Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Alexander Stephan</strong><br>Equipment Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Gary B. Glesener</strong><br>Facilities Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
 				<li><strong>Jennifer Tribble</strong><br>Food Coordinator<br>UCLA, Department of Neuroscience</li>
+				<li><strong>Breann Sitarski</strong><br>Fundraising Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Jigar Gor</strong><br>Group Coordinator<br>UCLA, Department of Chemistry and Biochemistry</li>
+				<li><strong>Alexis Popkow</strong><br>Merchandise Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				<li><strong>Juan Lora</strong><br>Public Talks Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
+				<li><strong>Shane Frewen</strong><br>Social Media Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+				</ul>
+
+				<h3>Department Liaisons</h3>
+
+				<ul>
+				<li><strong>Daniel Dauhajre</strong><br>UCLA, Department of Atmospheric and Oceanic Sciences</li>
+				<li><strong>Christina Van</strong><br>UCLA, Department of Biology</li>
+				<li><strong>Jessica Grandner</strong><br>UCLA, Department of Chemistry</li>
+				<li><strong>Ivy Curren</strong><br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
+				<li><strong>Caitlin Brown</strong><br>UCLA, Department of Ecology and Evolutionary Biology</li>
+				<li><strong>Devin Chu</strong> and <strong>Xinnan Du</strong><br>UCLA, Department of Physics and Astronomy (Astronomy)</li>
+				<li><strong>Ryan Roussel</strong><br>UCLA, Department of Physics and Astronomy (Physics)</li>
 				</ul>
 
 				<h2>Participating Groups</h2>
