--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,7 @@
 				    <center><iframe src="https://www.youtube-nocookie.com/embed/doC6Rd93YyA?rel=0" frameborder="0" allowfullscreen></iframe></center>
 				</div>
 
-				<p>Exploring Your Universe 2015 is made possible by the amazing hard work of our coordinators, participating groups, and sponsors.</p>
+				<p>Exploring Your Universe 2015 is made possible by the amazing hard work of our organizing committee, participating groups, and sponsors.</p>
 
 				<h2>Organizing Committee</h2>
 
