Updated About text

--- a/about/index.html
+++ b/about/index.html
@@ -55,13 +55,13 @@
 		<section class="blocks">
 			
 			<article class="block"><!-- Main Text block -->
-				<p>Exploring Your Universe is an annual science outreach day held on the UCLA campus, filled with exciting science demos, activities, and talks.</p>
+				<p>Exploring Your Universe (EYU) is an annual science outreach day held on the UCLA campus, filled with exciting science demos, activities, and talks. EYU has family-friendly activities that provide a wonderful look into real science for all ages, &#8220;from K through Gray&#8221;!</p>
 
 				<div class="video-container">
 				    <center><iframe src="https://www.youtube-nocookie.com/embed/doC6Rd93YyA?rel=0" frameborder="0" allowfullscreen></iframe></center>
 				</div>
 
-				<p>Exploring Your Universe 2015 is made possible by the amazing hard work of our organizing committee, participating groups, and sponsors.</p>
+				<p>EYU 2015 is made possible by the hard work of our amazing volunteers in our organizing committee and participating groups, and our sponsors.</p>
 
 				<h2>Organizing Committee</h2>
 
