Added new Galactic Center Group Logo

--- a/about/index.html
+++ b/about/index.html
@@ -140,7 +140,10 @@
 					<tbody>
 						<tr>
 							<td class="full">
-								<h3>UCLA<br>Galactic Center Group</h3>
+								<center><object type="image/svg+xml"
+								    width=45%
+								    data="../SponsorLogos/GCG_Logo.svg">
+								  <span/></object></center>
 							</td>
 							<!-- <td>
 								<h4 class="emptySponsor">&#x25CC;</h4>
