--- a/index.html
+++ b/index.html
@@ -327,7 +327,10 @@
 					<tbody>
 						<tr>
 							<td class="full">
-								<h3>UCLA<br>Galactic Center Group</h3>
+								<center><object type="image/svg+xml"
+								    width=45%
+								    data="./SponsorLogos/GCG_Logo.svg">
+								  <span/></object></center>
 							</td>
 							<!-- <td>
 								<h4 class="emptySponsor">&#x25CC;</h4>
@@ -349,7 +352,7 @@
 							<td class="full">
 								<center><object type="image/svg+xml"
 								    width=30%
-								    data="SponsorLogos/Celestron.svg">
+								    data="./SponsorLogos/Celestron.svg">
 								  <span/></object></center>
 							</td>
 							<!-- <td>
