Updated sponsor text

--- a/about/index.html
+++ b/about/index.html
@@ -158,7 +158,7 @@
 				
 				<!-- Shooting Star Sponsors -->
 				<hr>
-				<center><p><em>Shooting Star Sponsors</em></p></center>
+				<center><p><em>Shooting Star Sponsor</em></p></center>
 				<table class="sponsor-first">
 					<tbody>
 						<tr>
