--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 				
 				<!-- Galaxy Sponsors -->
 				<hr>
-				<center><p><em>Galaxy Sponsors</em></p></center>
+				<center><p><em>Galaxy Sponsor</em></p></center>
 				<table class="sponsor-first">
 					<tbody>
 						<tr>
@@ -345,7 +345,7 @@
 				
 				<!-- Shooting Star Sponsors -->
 				<hr>
-				<center><p><em>Shooting Star Sponsors</em></p></center>
+				<center><p><em>Shooting Star Sponsor</em></p></center>
 				<table class="sponsor-first">
 					<tbody>
 						<tr>
