--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		
 		<section class="blocks">
 			
-			<!-- <img src="./Map.png"> -->
+			<!-- <img src="./maps/Map.png"> -->
 			
 			<article class="block"><!-- Schedule block -->
 				<h2>Science Booths</h2>
