Updated Booths List

--- a/index.html
+++ b/index.html
@@ -124,9 +124,14 @@
 						
 						<div class="expand-content">
 							<ul class="demo-list">
-								<li>Our Evolving Brain: InterAxon</li>
+								<li>Brains!</li>
+								<li>EcoEvoNauts: Explore the Tree of Life</li>
+								<li>How to Read an Animal Skull</li>
+								<li>Origin of Life and Consciousness</li>
+								<li>Our Evolving Brain</li>
 								<li>The Science of How We Taste</li>
 								<li>Tide Pools and DNA Extraction</li>
+								<li>UCLA Emergency Medical Services</li>
 								<li>UCLA La Kretz Center for California Conservation Science</li>
 							</ul>
 						</div>
@@ -156,12 +161,13 @@
 								<li>Dinosaurs and Fossils</li>
 								<li>Diviner</li>
 								<li>ELFIN Cubist: Student-Built Space Weather Mission</li>
+								<li>Forecasting Killer Electrons in Earth&#8217;s Radiation Belts</li>
 								<li>Meteorites: Rocks from Space!</li>
 								<li>Mineral Collection</li>
 								<li>The Planeterrella: Space Weather in a Jar</li>
 								<li>Rock Room</li>
 								<li>Spinlab: Tornadoes in a Tank</li>
-								<li>Venus Exploration</li>
+								<li>Venus Exploration (same location as Weather on Other Worlds)</li>
 								<li>Weather on Other Worlds</li>
 								<li>What is a sunspot?</li>
 							</ul>
