Twitter Link Update

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</ul></center>
 		<center><ul class="pages">
 			<li>Find us on: </li>
-			<li><a href="https://twitter.com/eyu_ucla">Twitter</a></li>
+			<li><a href="https://twitter.com/eyu_ucla">Twitter (@EYU_UCLA)</a></li>
 			<li><a href="https://www.facebook.com/events/170086553337504/">Facebook</a></li>
 			<li><a href="https://twitter.com/search?q=%23EYU2015">#EYU2015</a></li>
 		</ul></center>
