Updated about page for 2016

--- a/about/index.html
+++ b/about/index.html
@@ -55,135 +55,47 @@
 		<section class="blocks">
 			
 			<article class="block"><!-- Main Text block -->
-				<p>Exploring Your Universe (EYU) is an annual science outreach day held on the UCLA campus, filled with exciting science demos, activities, and talks. EYU has family-friendly activities that provide a wonderful look into real science for all ages, &#8220;from K through Gray&#8221;!</p>
+                <p>Exploring Your Universe (EYU) is an annual science outreach day held on the UCLA campus, filled with exciting science demos, fun activities, and interesting talks. EYU has family-friendly activities that provide a wonderful look into real science for all ages, &#8220;from K through Gray&#8221;!</p>
 
-				<div class="video-container">
-				    <center><iframe src="https://www.youtube-nocookie.com/embed/doC6Rd93YyA?rel=0" frameborder="0" allowfullscreen></iframe></center>
-				</div>
+                <div class="video-container">
+                    <center><iframe src="https://www.youtube-nocookie.com/embed/doC6Rd93YyA?rel=0" frameborder="0" allowfullscreen></iframe></center>
+                </div>
 
-				<p>EYU 2015 is made possible by the hard work of our amazing volunteers in our organizing committee and participating groups, and our sponsors.</p>
+                <p>EYU 2016 is made possible by the hard work of our amazing volunteers in our organizing committee and participating groups, and our sponsors.</p>
 
-				<h2>Organizing Committee</h2>
+                <h2>EYU 2016 Organizing Committee</h2>
 
-				<p>Exploring Your Universe 2015 was put together with the help of all members of the 2015 EYU Organizing Committee:</p>
+                <ul>
+                <li><strong>Michael Topping</strong><br>Lead Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+                <li><strong>Alexander Stephan</strong><br>Equipment Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+                <li><strong>Michael Topping</strong><br>Facilities Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+                <li><strong>Jennifer Tribble</strong><br>Food Coordinator<br>UCLA, Department of Neuroscience</li>
+                <li><strong>Michelle Consiglio</strong><br>Fundraising Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+                <li><strong>Xinnan Du</strong> and <strong>Ryan Roussel</strong><br>Group Coordinators<br>UCLA, Department of Physics and Astronomy</li>
+                <li><strong>Christina Van</strong><br>Merchandise Coordinator<br>UCLA, Department of Biology</li>
+                <li><strong>Abhimat Gautam</strong><br>Print and Design Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+                <li><strong>Oscar Campos</strong><br>Public Talks Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
+                <li><strong>Breann Sitarski</strong><br>Social Media Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+                </ul>
 
-				<ul>
-				<li><strong>Michael Topping</strong><br>Lead Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Laura Vican</strong><br>Consultant<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Abhimat Gautam</strong><br>Design Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Alexander Stephan</strong><br>Equipment Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Gary B. Glesener</strong><br>Facilities Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
-				<li><strong>Jennifer Tribble</strong><br>Food Coordinator<br>UCLA, Department of Neuroscience</li>
-				<li><strong>Breann Sitarski</strong><br>Fundraising Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Jigar Gor</strong><br>Group Coordinator<br>UCLA, Department of Chemistry and Biochemistry</li>
-				<li><strong>Alexis Popkow</strong><br>Merchandise Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-				<li><strong>Juan Lora</strong><br>Public Talks Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
-				<li><strong>Shane Frewen</strong><br>Social Media Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-				</ul>
+                <h3>Department Liaisons</h3>
 
-				<h3>Department Liaisons</h3>
+                <ul>
+                <li><strong>—</strong><br>UCLA, Department of Atmospheric and Oceanic Sciences</li>
+                <li><strong>—</strong><br>UCLA, Department of Biology</li>
+                <li><strong>—</strong><br>UCLA, Department of Chemistry</li>
+                <li><strong>—</strong><br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
+                <li><strong>—</strong><br>UCLA, Department of Ecology and Evolutionary Biology</li>
+                <li><strong>Devin Chu</strong> and <strong>Helen Kim</strong><br>UCLA, Department of Physics and Astronomy (Astronomy)</li>
+                <li><strong>—</strong><br>UCLA, Department of Physics and Astronomy (Physics)</li>
+                </ul>
 
-				<ul>
-				<li><strong>Daniel Dauhajre</strong><br>UCLA, Department of Atmospheric and Oceanic Sciences</li>
-				<li><strong>Christina Van</strong><br>UCLA, Department of Biology</li>
-				<li><strong>Jessica Grandner</strong><br>UCLA, Department of Chemistry</li>
-				<li><strong>Ivy Curren</strong><br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
-				<li><strong>Caitlin Brown</strong><br>UCLA, Department of Ecology and Evolutionary Biology</li>
-				<li><strong>Devin Chu</strong> and <strong>Xinnan Du</strong><br>UCLA, Department of Physics and Astronomy (Astronomy)</li>
-				<li><strong>Ryan Roussel</strong><br>UCLA, Department of Physics and Astronomy (Physics)</li>
-				</ul>
+                <h2>Participating Groups</h2>
 
-				<h2>Participating Groups</h2>
-
-				<h3>UCLA Partners</h3>
-
-				<center><p><em>To be announced</em></p></center>
-
-				<h3>Community Partners</h3>
-
-				<center><p><em>To be announced</em></p></center>
-			</article> <!-- Main Text /block -->
-			
-			<article class="block"><!-- Sponsor block -->
-				<h2>Sponsors</h2>
-				<!-- Supergiant Sponsors -->
-				<center><p><em>Supergiant Sponsors</em></p></center>
-				<table class="sponsor-first">
-					<tbody>
-						<tr>
-							<td>
-								<h3>Mani L. Bhaumik</h3>
-							</td>
-							<td>
-								<h3>California Space<br>Grant Consortium</h3>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				<table class="sponsor">
-					<tbody>	
-						<tr>
-							<td class="full">
-								<img width=30% src="../SponsorLogos/UCLACollegePhysicalSciences.png">
-							</td>
-							<!-- <td>
-								<h3 class="emptySponsor">&#x25CC;</h3>
-							</td> -->
-						</tr>
-					</tbody>
-				</table>
-				
-				<!-- Galaxy Sponsors -->
-				<hr>
-				<center><p><em>Galaxy Sponsors</em></p></center>
-				<table class="sponsor-first">
-					<tbody>
-						<tr>
-							<td class="full">
-								<center><object type="image/svg+xml"
-								    width=45%
-								    data="../SponsorLogos/GCG_Logo.svg">
-								  <span/></object></center>
-							</td>
-							<!-- <td>
-								<h4 class="emptySponsor">&#x25CC;</h4>
-							</td> -->
-						</tr>
-						<!-- <tr>
-							<td><h4>Department 1</h4></td>
-							<td><h4>Department 2</h4></td>
-						</tr> -->
-					</tbody>
-				</table>
-				
-				<!-- Shooting Star Sponsors -->
-				<hr>
-				<center><p><em>Shooting Star Sponsor</em></p></center>
-				<table class="sponsor-first">
-					<tbody>
-						<tr>
-							<td class="full">
-								<center><object type="image/svg+xml"
-								    width=30%
-								    data="../SponsorLogos/Celestron.svg">
-								  <span/></object></center>
-							</td>
-							<!-- <td>
-								<h4 class="emptySponsor">&#x25CC;</h4>
-							</td> -->
-						</tr>
-						<!-- <tr>
-							<td><h4>Department 1</h4></td>
-							<td><h4>Department 2</h4></td>
-						</tr> -->
-					</tbody>
-				</table>
-			</article> <!-- Sponsor /block -->
-			
+                <center><p><em>To be announced</em></p></center>
+			</article> <!-- Main Text /block -->			
 		</section><!-- /blocks -->
 	</div> <!-- /content -->
-	<script src="../jquery-1.11.1.min.js"></script>
-    <script src="../expand.js"></script>
 
 	<footer class="small wrap">
 		<center><p class="small">Website designed by<br>Abhimat Gautam and Michael Topping</p></center>
