Also updating comments…

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
  
-      Static EYU 2015: Downloads webpage by Abhimat Gautam.
+      Static EYU: About webpage by Abhimat Gautam.
   
 -->
 <html lang="en">
