--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <!--
  
-      Static EYU 2015: Downloads webpage by Abhimat Gautam.
+      Static EYU: Downloads webpage by Abhimat Gautam.
   
 -->
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<title>EYU 2015: Downloads</title>
+		<title>EYU 2016: Downloads</title>
 		
 		<!-- Google Web Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
@@ -55,27 +55,12 @@
 		<section class="blocks">
 			
 			<article class="block"><!-- Main Text block -->
-				<p>Copies of our posters and handouts for distributions:</p>
-
-				<h2>Letter Size Flyers</h2>
-
-				<ul>
-				<li>Design 1: <a href="./BWFlyer2.pdf">English</a>, <a href="./EspanolBWFlyer2.pdf">Español</a> (PDF, 6.7 MB each)</li>
-				<li>Design 2: <a href="./BWFlyer3.pdf">English</a>, <a href="./EspanolBWFlyer3.pdf">Español</a> (PDF, 8.1 MB each)</li>
-				</ul>
-
-				<h2>Printable Handouts</h2>
-
-				<ul>
-				<li><a href="./BWHandouts.pdf">PDF</a> including both designs in English and Español (29.8 MB)</li>
-				</ul>
+				<p>Copies of our posters and handouts for distribution: <em>coming soon!</em></p>
 			</article> <!-- Main Text /block -->
 			
 		</section><!-- /blocks -->
 	</div> <!-- /content -->
-	<script src="../jquery-1.11.1.min.js"></script>
-    <script src="../expand.js"></script>
-
+    
 	<footer class="small wrap">
 		<center><p class="small">Website designed by<br>Abhimat Gautam and Michael Topping</p></center>
 	</footer>
