Updated About Text page

--- a/about/index.html
+++ b/about/index.html
@@ -74,7 +74,7 @@
                 <li><strong>Xinnan Du</strong> and <strong>Ryan Roussel</strong><br>Group Coordinators<br>UCLA, Department of Physics and Astronomy</li>
                 <li><strong>Christina Van</strong><br>Merchandise Coordinator<br>UCLA, Department of Biology</li>
                 <li><strong>Abhimat Gautam</strong><br>Print and Design Coordinator<br>UCLA, Department of Physics and Astronomy</li>
-                <li><strong>Oscar Campos</strong><br>Public Talks Coordinator<br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
+                <li><strong>Oscar Campos</strong><br>Public Talks Coordinator<br>UCLA, Department of Molecular Biology</li>
                 <li><strong>Breann Sitarski</strong><br>Social Media Coordinator<br>UCLA, Department of Physics and Astronomy</li>
                 </ul>
 
