Updated about text

--- a/about/index.html
+++ b/about/index.html
@@ -67,13 +67,13 @@
 
                 <ul>
                 <li><strong>Michael Topping</strong><br>Lead Coordinator<br>UCLA, Department of Physics and Astronomy</li>
+                <li><strong>Abhimat Gautam</strong><br>Design Coordinator<br>UCLA, Department of Physics and Astronomy</li>
                 <li><strong>Alexander Stephan</strong><br>Equipment Coordinator<br>UCLA, Department of Physics and Astronomy</li>
                 <li><strong>Michael Topping</strong><br>Facilities Coordinator<br>UCLA, Department of Physics and Astronomy</li>
                 <li><strong>Jennifer Tribble</strong><br>Food Coordinator<br>UCLA, Department of Neuroscience</li>
                 <li><strong>Michelle Consiglio</strong><br>Fundraising Coordinator<br>UCLA, Department of Physics and Astronomy</li>
                 <li><strong>Xinnan Du</strong> and <strong>Ryan Roussel</strong><br>Group Coordinators<br>UCLA, Department of Physics and Astronomy</li>
                 <li><strong>Christina Van</strong><br>Merchandise Coordinator<br>UCLA, Department of Biology</li>
-                <li><strong>Abhimat Gautam</strong><br>Print and Design Coordinator<br>UCLA, Department of Physics and Astronomy</li>
                 <li><strong>Oscar Campos</strong><br>Public Talks Coordinator<br>UCLA, Department of Biology</li>
                 <li><strong>Breann Sitarski</strong><br>Social Media Coordinator<br>UCLA, Department of Physics and Astronomy</li>
                 </ul>
