Added header image

--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
 			<!-- <img src="./maps/Map.png"> -->
             
 			<article class="block"><!-- Main Text block -->
-				<p>Exploring Your Universe (EYU) is an annual science outreach day held on the UCLA campus, filled with exciting science demos, fun activities, and interesting talks. EYU has family-friendly activities that provide a wonderful look into real science for all ages, &#8220;from K through Gray&#8221;!</p>
+                <figure class="bleed"><img src="resources/Header.png" srcset="resources/Header-1x.png 1x, resources/Header-2x.png 2x"></figure>
+                
+                <p>Exploring Your Universe (EYU) is an annual science outreach day held on the UCLA campus, filled with exciting science demos, fun activities, and interesting talks. EYU has family-friendly activities that provide a wonderful look into real science for all ages, &#8220;from K through Gray&#8221;!</p>
 
-				<div class="video-container">
-				    <center><iframe src="https://www.youtube-nocookie.com/embed/doC6Rd93YyA?rel=0" frameborder="0" allowfullscreen></iframe></center>
-				</div>
+                <!-- <div class="video-container">
+                    <center><iframe src="https://www.youtube-nocookie.com/embed/doC6Rd93YyA?rel=0" frameborder="0" allowfullscreen></iframe></center>
+                </div> -->
             </article> <!-- Main Text /block -->
 		
 		</section><!-- /blocks -->
