Updated About Text

--- a/about/index.html
+++ b/about/index.html
@@ -82,17 +82,13 @@
 
                 <ul>
                 <li><strong>—</strong><br>UCLA, Department of Atmospheric and Oceanic Sciences</li>
-                <li><strong>—</strong><br>UCLA, Department of Biology</li>
+                <li><strong>Christina Van</strong><br>UCLA, Department of Biology</li>
                 <li><strong>—</strong><br>UCLA, Department of Chemistry</li>
                 <li><strong>—</strong><br>UCLA, Department of Earth, Planetary, and Space Sciences</li>
                 <li><strong>—</strong><br>UCLA, Department of Ecology and Evolutionary Biology</li>
                 <li><strong>Devin Chu</strong> and <strong>Helen Kim</strong><br>UCLA, Department of Physics and Astronomy (Astronomy)</li>
-                <li><strong>—</strong><br>UCLA, Department of Physics and Astronomy (Physics)</li>
+                <li><strong>Ryan Roussel</strong><br>UCLA, Department of Physics and Astronomy (Physics)</li>
                 </ul>
-
-                <h2>Participating Groups</h2>
-
-                <center><p><em>To be announced</em></p></center>
 			</article> <!-- Main Text /block -->			
 		</section><!-- /blocks -->
 	</div> <!-- /content -->
