Added posters to website

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -55,7 +55,13 @@
 		<section class="blocks">
 			
 			<article class="block"><!-- Main Text block -->
-				<p>Copies of our posters and handouts for distribution: <em>coming soon!</em></p>
+                <p>Copies of our posters and handouts for distribution. Click image to download PDF copies of these files</p>
+
+                <h2>11&quot; ⨉ 17&quot; Posters</h2>
+
+                <p><a href="./Poster_1_1117.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_1_1117_Web1x.jpg 1x, Poster_1_1117_Web2x.jpg 2x"></figure></a>
+                <a href="./Poster_2_1117.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_2_1117_Web1x.jpg 1x, Poster_2_1117_Web2x.jpg 2x"></figure></a>
+                <a href="./Poster_3_1117.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_3_1117_Web1x.jpg 1x, Poster_3_1117_Web2x.jpg 2x"></figure></a></p>
 			</article> <!-- Main Text /block -->
 			
 		</section><!-- /blocks -->
