Español posters and compressed preview images

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -65,15 +65,31 @@
 
                 <h2>Letter Size (8.5&Prime; &times; 11&Prime;) Color Posters</h2>
 
+                <h3>English</h3>
+
                 <p><a href="./Poster_1_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_1_Letter_Web1x.jpg 1x, Poster_1_Letter_Web2x.jpg 2x"></figure></a>
                 <a href="./Poster_2_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_2_Letter_Web1x.jpg 1x, Poster_2_Letter_Web2x.jpg 2x"></figure></a>
                 <a href="./Poster_3_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_3_Letter_Web1x.jpg 1x, Poster_3_Letter_Web2x.jpg 2x"></figure></a></p>
 
+                <h3>Español</h3>
+
+                <p><a href="./Espanol_Poster_1_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_1_Letter_Web1x.jpg 1x, Espanol_Poster_1_Letter_Web2x.jpg 2x"></figure></a>
+                <a href="./Espanol_Poster_2_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_2_Letter_Web1x.jpg 1x, Espanol_Poster_2_Letter_Web2x.jpg 2x"></figure></a>
+                <a href="./Espanol_Poster_3_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_3_Letter_Web1x.jpg 1x, Espanol_Poster_3_Letter_Web2x.jpg 2x"></figure></a></p>
+
                 <h2>Letter Size (8.5&Prime; &times; 11&Prime;) Black and White Posters</h2>
+
+                <h3>English</h3>
 
                 <p><a href="./Poster_1_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_1_Letter_BW_Web1x.jpg 1x, Poster_1_Letter_BW_Web2x.jpg 2x"></figure></a>
                 <a href="./Poster_2_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_2_Letter_BW_Web1x.jpg 1x, Poster_2_Letter_BW_Web2x.jpg 2x"></figure></a>
                 <a href="./Poster_3_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_3_Letter_BW_Web1x.jpg 1x, Poster_3_Letter_BW_Web2x.jpg 2x"></figure></a></p>
+
+                <h3>Español</h3>
+
+                <p><a href="./Espanol_Poster_1_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_1_Letter_BW_Web1x.jpg 1x, Espanol_Poster_1_Letter_BW_Web2x.jpg 2x"></figure></a>
+                <a href="./Espanol_Poster_2_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_2_Letter_BW_Web1x.jpg 1x, Espanol_Poster_2_Letter_BW_Web2x.jpg 2x"></figure></a>
+                <a href="./Espanol_Poster_3_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_3_Letter_BW_Web1x.jpg 1x, Espanol_Poster_3_Letter_BW_Web2x.jpg 2x"></figure></a></p>
 			</article> <!-- Main Text /block -->
 			
 		</section><!-- /blocks -->
